--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-sourceCompatibility = 1.9
+sourceCompatibility = 1.8
 mainClassName = "Main"
 applicationName = "twitter-promoter"
 version = '1.0'
+
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.3.0'
