--- a/build.gradle
+++ b/build.gradle
@@ -6,20 +6,13 @@ repositories {
     mavenCentral()
 }
 
-jar {
-    baseName = 'lolin1-twitter-promoter'
-    version =  '1.0'
+dependencies {
+    compile 'org.twitter4j:twitter4j-core:2.1.4'
 }
 
-dependencies {
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.3.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.3.0'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.3.0'
-    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.4.1'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.2.1'
-    compile 'org.eclipse.jetty:jetty-servlet:7.5.3.v20111011'
-    compile 'javax.servlet:servlet-api:2.5'
-    compile 'org.codehaus.jettison:jettison:1.3.5'
+jar {
+    baseName = 'lolin1-twitter-promoter'
+    version = '1.0'
 }
 
 task stage(dependsOn: ['clean', 'installApp'])
